@@ -10,7 +10,7 @@ use strict;
 use vars qw{$VERSION};
 
 BEGIN {
-    $VERSION = '1.27_01';
+    $VERSION = '1.28';
     $VERSION = eval $VERSION;
 }
 
